--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/webBook
-spring.datasource.username=testUser
-spring.datasource.password=1234
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.url=jdbc:mariadb://localhost:3306/webBook
+#spring.datasource.username=testUser
+#spring.datasource.password=1234
+server.port=8081
 
 logging.level.org.springframework=info
 logging.level.org.zerock=debug
@@ -14,10 +15,10 @@ spring.jpa.show-sql=true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.datasource.url=jdbc:h2:tcp://localhost/~/webBook
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.h2.console.enabled=true
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:tcp://localhost/~/webBook
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
 
 com.example.jwt.secret=hello1234567890
